--- a/resetSecure/request.html
+++ b/resetSecure/request.html
@@ -3,168 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Request tech support from ResetSecureLLC. We help seniors with computers, passwords, antivirus, and scam protection.">
-    <title>Request Tech Support | ResetSecureLLC</title>
+    <title>Request Help | ResetSecureLLC</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">ResetSecure<span>LLC</span></a>
-            <nav class="main-nav">
-                <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+            </a>
+            <nav class="nav">
+                <button class="nav-toggle" aria-label="Menu">
                     <span></span>
                     <span></span>
                     <span></span>
                 </button>
-                <ul class="nav-list">
+                <ul class="nav-menu">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="request.html">Request Help</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="request.html" class="active">Request Help</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <a href="tel:+15551234567" class="phone-link">(555) 123-4567</a>
             </nav>
         </div>
     </header>
 
-    <main>
-        <section class="page-hero">
+    <main class="request-page">
+        <section class="request-hero">
             <div class="container">
                 <h1>Request Tech Support</h1>
-                <p class="hero-text">Fill out the form below and we'll get back to you within one business day.</p>
+                <p>Fill out this simple form and we'll get back to you within 2 hours.</p>
             </div>
         </section>
 
         <section class="request-form-section">
             <div class="container">
-                <form id="supportRequestForm" class="support-form" novalidate>
-                    <div class="form-group" data-animate="fade-up">
-                        <label for="fullName">Full Name</label>
+                <form id="help-request-form" class="help-request-form">
+                    <div class="form-group">
+                        <label for="full-name">Full Name</label>
                         <div class="input-with-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M172,120a44,44,0,1,1-44-44A44,44,0,0,1,172,120Zm60,8A104,104,0,1,1,128,24,104.2,104.2,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Zm-84,61.8c-12.1-1.5-30.7-7.9-44.4-21.6S50.3,124.1,48.8,112a8,8,0,0,1,6.9-8.9,7.8,7.8,0,0,1,.9,0,8,8,0,0,1,8,7.1c1.2,9.1,6.4,25.1,17.2,35.9S118,158.8,128,160a8,8,0,0,1-.7,16Z"></path>
-                            </svg>
-                            <input type="text" id="fullName" name="fullName" required aria-required="true" placeholder="Enter your full name">
+                            <img src="assets/icons/user-circle.svg" alt="User icon">
+                            <input type="text" id="full-name" name="full-name" required placeholder="John Smith">
                         </div>
-                        <div class="error-message" id="nameError"></div>
                     </div>
 
-                    <div class="form-group" data-animate="fade-up" data-delay="0.1">
-                        <label for="address">Address</label>
+                    <div class="form-group">
+                        <label for="address">Address (for in-person visits)</label>
                         <div class="input-with-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M128,16a88.1,88.1,0,0,0-88,88c0,75.3,80,132.2,83.4,134.6a8,8,0,0,0,9.2,0C136,236.2,216,179.3,216,104A88.1,88.1,0,0,0,128,16Zm0,56a32,32,0,1,1-32,32A32,32,0,0,1,128,72Z"></path>
-                            </svg>
-                            <input type="text" id="address" name="address" required aria-required="true" placeholder="Enter your street address">
+                            <img src="assets/icons/map-pin.svg" alt="Map pin icon">
+                            <input type="text" id="address" name="address" placeholder="123 Main St, Anytown">
                         </div>
-                        <div class="error-message" id="addressError"></div>
                     </div>
 
-                    <div class="form-group" data-animate="fade-up" data-delay="0.2">
+                    <div class="form-group">
                         <label for="phone">Phone Number</label>
                         <div class="input-with-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M222.3,158.5l-46.8-20.1a14,14,0,0,0-13.3,1.3l-24.2,16.8a76.5,76.5,0,0,1-35.2-35h0L116.3,94a14,14,0,0,0,1.4-13.1L97.5,33.7a14,14,0,0,0-14.7-8.4A54.3,54.3,0,0,0,32,80c0,78.6,63.4,144,144,144a54.3,54.3,0,0,0,54.7-50.8A14,14,0,0,0,222.3,158.5ZM176,208A128.1,128.1,0,0,1,48,80,38.3,38.3,0,0,1,82.4,40.7a2,2,0,0,1,2.1,1.2L103,87.6a2,2,0,0,1-.2,1.9L82.4,118.9a12,12,0,0,0-.8,11.9,90.7,90.7,0,0,0,42.8,42.8,12,12,0,0,0,11.9-.8l29.4-20.4a2,2,0,0,1,1.9-.2l45.7,19.6a2,2,0,0,1,1.2,2.1A38.3,38.3,0,0,1,176,208Z"></path>
-                            </svg>
-                            <input type="tel" id="phone" name="phone" required aria-required="true" placeholder="Enter your phone number">
+                            <img src="assets/icons/phone.svg" alt="Phone icon">
+                            <input type="tel" id="phone" name="phone" required placeholder="(555) 123-4567">
                         </div>
-                        <div class="error-message" id="phoneError"></div>
                     </div>
 
-                    <div class="form-group" data-animate="fade-up" data-delay="0.3">
-                        <label for="email">Email Address (optional)</label>
+                    <div class="form-group">
+                        <label for="email">Email (optional)</label>
                         <div class="input-with-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-8,144H40V74.2l82.6,75.7a8,8,0,0,0,10.8,0L216,74.2V192ZM98.7,128,40,75.9V64l80,72L200,64V75.9Z"></path>
-                            </svg>
-                            <input type="email" id="email" name="email" placeholder="Enter your email address">
+                            <img src="assets/icons/envelope.svg" alt="Envelope icon">
+                            <input type="email" id="email" name="email" placeholder="john@example.com">
                         </div>
-                        <div class="error-message" id="emailError"></div>
                     </div>
 
-                    <div class="form-group" data-animate="fade-up" data-delay="0.4">
-                        <label for="problem">Describe Your Problem</label>
-                        <div class="input-with-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M128,24A104,104,0,1,0,232,128,104.1,104.1,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40a8,8,0,0,1,8,8ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"></path>
-                            </svg>
-                            <textarea id="problem" name="problem" required aria-required="true" placeholder="Describe your tech problem in detail"></textarea>
+                    <div class="form-group">
+                        <label for="issue">What do you need help with?</label>
+                        <textarea id="issue" name="issue" required placeholder="Describe your issue in detail. Include any error messages you see and the device you're using."></textarea>
+                        <div class="form-tip">
+                            <strong>Tip:</strong> Include the device name (e.g., "iPad 7th generation") and any error messages.
                         </div>
-                        <div class="error-message" id="problemError"></div>
+                        <div id="suggestions" class="form-suggestions">
+                            <!-- JS will populate common issues here -->
+                        </div>
                     </div>
 
-                    <div class="form-submit" data-animate="fade-up" data-delay="0.5">
-                        <button type="submit" class="btn btn-primary btn-large">Submit Request</button>
+                    <div class="form-group">
+                        <label for="preferred-contact">Preferred Contact Method</label>
+                        <select id="preferred-contact" name="preferred-contact">
+                            <option value="phone">Phone Call</option>
+                            <option value="email">Email</option>
+                            <option value="in-person">In-Person Visit</option>
+                        </select>
                     </div>
+
+                    <div class="form-group">
+                        <label for="urgency">Urgency</label>
+                        <select id="urgency" name="urgency">
+                            <option value="routine">Routine - Can wait 24 hours</option>
+                            <option value="urgent">Urgent - Need help today</option>
+                            <option value="emergency">Emergency - Scam or security issue</option>
+                        </select>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit Request</button>
                 </form>
 
-                <div id="successMessage" class="success-message" style="display: none;" data-animate="fade-in">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 256 256" fill="#4CAF50">
-                        <path d="M173.7,98.3a8.1,8.1,0,0,1,0,11.4l-56,56a8.2,8.2,0,0,1-11.4,0l-24-24a8.1,8.1,0,0,1,11.4-11.4L112,148.7l50.3-50.4A8.1,8.1,0,0,1,173.7,98.3ZM232,128A104,104,0,1,1,128,24,104.2,104.2,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"></path>
-                    </svg>
-                    <h3>Thank You!</h3>
-                    <p>Your request has been submitted successfully. We'll contact you within one business day.</p>
-                    <p>For immediate assistance, please call <a href="tel:+18005551234">(800) 555-1234</a>.</p>
-                    <a href="index.html" class="btn btn-secondary">Back to Home</a>
+                <div class="form-sidebar">
+                    <h3>Need Help Describing Your Issue?</h3>
+                    <p>Our technicians can help better if you include:</p>
+                    <ul>
+                        <li>The device name and model</li>
+                        <li>What you were doing when the problem occurred</li>
+                        <li>Any error messages you see</li>
+                        <li>Whether the problem happens all the time or just sometimes</li>
+                    </ul>
+                    <div class="callout-box">
+                        <h4>For urgent scams or security issues:</h4>
+                        <a href="tel:+15551234567" class="btn btn-secondary">Call Now: (555) 123-4567</a>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="call-now-section">
-            <div class="container" data-animate="fade-up">
-                <h2>Need Help Right Away?</h2>
-                <p>Call us now for immediate assistance with your tech problems.</p>
-                <a href="tel:+18005551234" class="btn btn-primary btn-large">Call Now: (800) 555-1234</a>
+        <section class="assurance-section">
+            <div class="container">
+                <h2>You're In Good Hands</h2>
+                <div class="assurance-grid">
+                    <div class="assurance-card">
+                        <img src="assets/icons/shield-check.svg" alt="Shield icon">
+                        <h3>Background Checked</h3>
+                        <p>All our technicians pass rigorous background checks.</p>
+                    </div>
+                    <div class="assurance-card">
+                        <img src="assets/icons/clock.svg" alt="Clock icon">
+                        <h3>Fast Response</h3>
+                        <p>We respond to all requests within 2 hours.</p>
+                    </div>
+                    <div class="assurance-card">
+                        <img src="assets/icons/heart.svg" alt="Heart icon">
+                        <h3>Senior-Focused</h3>
+                        <p>Patience and clear communication guaranteed.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-brand">
-                    <a href="index.html" class="logo">ResetSecure<span>LLC</span></a>
-                    <p class="tagline">Tech Help You Can Trust</p>
-                </div>
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="request.html">Request Help</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-contact">
-                    <h3>Contact Us</h3>
-                    <address>
-                        <p>123 Main Street<br>Anytown, ST 12345</p>
-                        <p><a href="tel:+18005551234">(800) 555-1234</a></p>
-                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
-                    </address>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> ResetSecureLLC. All rights reserved.</p>
-            </div>
-        </div>
+        <!-- Same footer as index.html -->
     </footer>
 
-    <a href="tel:+18005551234" class="floating-call" aria-label="Call Now">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="#ffffff">
-            <path d="M222.3,158.5l-46.8-20.1a14,14,0,0,0-13.3,1.3l-24.2,16.8a76.5,76.5,0,0,1-35.2-35h0L116.3,94a14,14,0,0,0,1.4-13.1L97.5,33.7a14,14,0,0,0-14.7-8.4A54.3,54.3,0,0,0,32,80c0,78.6,63.4,144,144,144a54.3,54.3,0,0,0,54.7-50.8A14,14,0,0,0,222.3,158.5ZM176,208A128.1,128.1,0,0,1,48,80,38.3,38.3,0,0,1,82.4,40.7a2,2,0,0,1,2.1,1.2L103,87.6a2,2,0,0,1-.2,1.9L82.4,118.9a12,12,0,0,0-.8,11.9,90.7,90.7,0,0,0,42.8,42.8,12,12,0,0,0,11.9-.8l29.4-20.4a2,2,0,0,1,1.9-.2l45.7,19.6a2,2,0,0,1,1.2,2.1A38.3,38.3,0,0,1,176,208Z"></path>
-        </svg>
+    <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
+        <img src="assets/icons/phone.svg" alt="Phone icon">
     </a>
-
-    <button class="scroll-top" aria-label="Scroll to top">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#ffffff">
-            <path d="M205.7,122.3a8.1,8.1,0,0,1,0,11.4,8.2,8.2,0,0,1-11.4,0L136,83.3V216a8,8,0,0,1-16,0V83.3L61.7,133.7a8.2,8.2,0,0,1-11.4,0,8.1,8.1,0,0,1,0-11.4l72-72a8.1,8.1,0,0,1,11.4,0ZM216,40a8,8,0,0,0-8,8V64H48V48a8,8,0,0,0-16,0V64a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A8,8,0,0,0,216,40Z"></path>
-        </svg>
-    </button>
 
     <script src="js/script.js"></script>
 </body>
