--- a/resetSecure/index.html
+++ b/resetSecure/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ResetSecureLLC provides trusted tech support for seniors. We help with computers, passwords, antivirus, and scam protection.">
     <title>ResetSecureLLC - Tech Help You Can Trust</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">ResetSecure<span>LLC</span></a>
-            <nav class="main-nav">
-                <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+            </a>
+            <nav class="nav">
+                <button class="nav-toggle" aria-label="Menu">
                     <span></span>
                     <span></span>
                     <span></span>
                 </button>
-                <ul class="nav-list">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="request.html">Request Help</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <a href="tel:+15551234567" class="phone-link">(555) 123-4567</a>
             </nav>
         </div>
     </header>
@@ -34,11 +35,13 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>Tech Help You Can Trust</h1>
-                <p class="hero-text">Friendly, patient tech support designed specifically for seniors. We speak plain English, never tech jargon.</p>
-                <div class="hero-buttons">
-                    <a href="tel:+18005551234" class="btn btn-primary btn-large">Call Now: (800) 555-1234</a>
-                    <a href="request.html" class="btn btn-secondary btn-large">Request Help</a>
+                <div class="hero-content">
+                    <h1>Tech Help You Can Trust</h1>
+                    <p class="subheadline">Personal, friendly, and reliable support for seniors and families.</p>
+                    <a href="request.html" class="btn btn-primary">Request Help</a>
+                </div>
+                <div class="hero-illustration">
+                    <img src="assets/images/hero-illustration.jpg" alt="Senior couple using technology with assistance">
                 </div>
             </div>
         </section>
@@ -47,41 +50,33 @@
             <div class="container">
                 <h2>How We Can Help</h2>
                 <div class="services-grid">
-                    <div class="service-card" data-animate="fade-up">
+                    <div class="service-card">
                         <div class="service-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M168,224a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,224Zm56-128v88a24.1,24.1,0,0,1-24,24H56a24.1,24.1,0,0,1-24-24V96A24.1,24.1,0,0,1,56,72H80V48a24.1,24.1,0,0,1,24-24h48a24.1,24.1,0,0,1,24,24V72h24A24.1,24.1,0,0,1,224,96ZM112,72h32V48a8,8,0,0,0-8-8H104a8,8,0,0,0-8,8V72Zm96,24a8,8,0,0,0-8-8H56a8,8,0,0,0-8,8v88a8,8,0,0,0,8,8H200a8,8,0,0,0,8-8Z"></path>
-                            </svg>
+                            <img src="assets/icons/device-mobile.png" alt="Device icon">
                         </div>
-                        <h3>Computer & Device Help</h3>
-                        <p>Setup, troubleshooting, and lessons for computers, tablets, and smartphones.</p>
+                        <h3>Tech Support</h3>
+                        <p>Help with smartphones, tablets, computers, and other devices.</p>
                     </div>
-                    <div class="service-card" data-animate="fade-up" data-delay="0.1">
+                    <div class="service-card">
                         <div class="service-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M160,16A80.1,80.1,0,0,0,83.9,120.8L26.3,178.3A8.1,8.1,0,0,0,24,184v40a8,8,0,0,0,8,8H72a8,8,0,0,0,8-8V208H96a8,8,0,0,0,8-8V184h16a8,8,0,0,0,5.7-2.3l9.5-9.6A80,80,0,1,0,160,16Zm20,76a16,16,0,1,1,16-16A16,16,0,0,1,180,92Z"></path>
-                            </svg>
+                            <img src="assets/icons/key.png" alt="Key icon">
                         </div>
-                        <h3>Password Help</h3>
-                        <p>Password recovery, setup, and secure storage solutions.</p>
+                        <h3>Password Recovery</h3>
+                        <p>Reset forgotten passwords and set up secure password managers.</p>
                     </div>
-                    <div class="service-card" data-animate="fade-up" data-delay="0.2">
+                    <div class="service-card">
                         <div class="service-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M240,98a14,14,0,0,1-14,14H224v58a14,14,0,0,1-14,14H46a14,14,0,0,1-14-14V112H30a14,14,0,0,1-14-14V64a14,14,0,0,1,14-14H82.3a46,46,0,0,1,91.4,0H226a14,14,0,0,1,14,14ZM94,64a30,30,0,0,1,60,0Zm136,0v34H224V64a2,2,0,0,0-2-2H178.7a14.1,14.1,0,0,1-13.6-10.3,45.8,45.8,0,0,0-86.2,0A14.1,14.1,0,0,1,65.3,62H32a2,2,0,0,0-2,2V98a2,2,0,0,0,2,2H48v58a2,2,0,0,0,2,2H210a2,2,0,0,0,2-2V100h16a2,2,0,0,0,2-2Z"></path>
-                            </svg>
+                            <img src="assets/icons/shield-check.png" alt="Shield icon">
                         </div>
-                        <h3>Virus Protection</h3>
-                        <p>Antivirus installation, malware removal, and security setup.</p>
+                        <h3>Antivirus Installation</h3>
+                        <p>Protect your devices from viruses and malware.</p>
                     </div>
-                    <div class="service-card" data-animate="fade-up" data-delay="0.3">
+                    <div class="service-card">
                         <div class="service-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256" fill="#2a5cbd">
-                                <path d="M208,80H172V56a44,44,0,0,0-88,0V80H48A16,16,0,0,0,32,96V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V96A16,16,0,0,0,208,80ZM100,56a28,28,0,0,1,56,0V80H100ZM208,208H48V96H208V208Zm-68-56a12,12,0,1,1-12-12A12,12,0,0,1,140,152Z"></path>
-                            </svg>
+                            <img src="assets/icons/bug.png" alt="Bug icon">
                         </div>
                         <h3>Scam Protection</h3>
-                        <p>Learn to recognize and avoid online scams and fraud.</p>
+                        <p>Identify and prevent online scams targeting seniors.</p>
                     </div>
                 </div>
             </div>
@@ -89,89 +84,99 @@
 
         <section class="testimonials">
             <div class="container">
-                <h2>What Our Customers Say</h2>
+                <h2>What Our Clients Say</h2>
                 <div class="testimonial-slider">
-                    <div class="testimonial active" data-animate="fade-in">
-                        <blockquote>
-                            "Finally, tech help that doesn't make me feel stupid! The ResetSecure team is patient and explains things in a way I can understand."
-                        </blockquote>
-                        <div class="testimonial-author">- Martha, 72</div>
+                    <div class="testimonial active">
+                        <blockquote>"John helped me reset my iPad when I couldn't figure it out. He was so patient and kind - just like a grandson would be!"</blockquote>
+                        <cite>- Martha, 78</cite>
                     </div>
-                    <div class="testimonial" data-animate="fade-in">
-                        <blockquote>
-                            "They fixed my computer and showed me how to avoid scams. Now I feel much safer online."
-                        </blockquote>
-                        <div class="testimonial-author">- Robert, 68</div>
+                    <div class="testimonial">
+                        <blockquote>"After my father got scammed online, ResetSecure set up protections and taught him how to stay safe. Peace of mind for our whole family."</blockquote>
+                        <cite>- David, 52</cite>
                     </div>
-                    <div class="testimonial" data-animate="fade-in">
-                        <blockquote>
-                            "I can video chat with my grandkids now thanks to ResetSecure! Worth every penny."
-                        </blockquote>
-                        <div class="testimonial-author">- Evelyn, 79</div>
+                    <div class="testimonial">
+                        <blockquote>"They fixed my computer virus and explained everything in terms I could understand. No tech jargon!"</blockquote>
+                        <cite>- Eleanor, 82</cite>
                     </div>
                 </div>
-                <div class="testimonial-nav">
-                    <button class="testimonial-dot active" aria-label="View testimonial 1"></button>
-                    <button class="testimonial-dot" aria-label="View testimonial 2"></button>
-                    <button class="testimonial-dot" aria-label="View testimonial 3"></button>
+                <div class="slider-controls">
+                    <button class="slider-prev" aria-label="Previous testimonial">←</button>
+                    <div class="slider-dots"></div>
+                    <button class="slider-next" aria-label="Next testimonial">→</button>
                 </div>
             </div>
         </section>
 
-        <section class="cta-section">
-            <div class="container" data-animate="fade-up">
-                <h2>Ready for Stress-Free Tech Support?</h2>
-                <p>We're just a phone call away. No confusing menus, just friendly help.</p>
-                <div class="cta-buttons">
-                    <a href="tel:+18005551234" class="btn btn-primary btn-large">Call Now: (800) 555-1234</a>
-                    <a href="request.html" class="btn btn-secondary btn-large">Request Help Online</a>
+        <section class="security">
+            <div class="container">
+                <div class="security-content">
+                    <h2>Why Seniors Need Protection</h2>
+                    <p>Seniors lose nearly <strong>$3 billion annually</strong> to tech support scams, phishing emails, and fraudulent calls. Scammers target seniors because they're often less familiar with technology and more trusting.</p>
+                    <p>We provide:</p>
+                    <ul class="security-features">
+                        <li>Scam identification training</li>
+                        <li>Device security setup</li>
+                        <li>Emergency support if you suspect fraud</li>
+                        <li>Peace of mind for you and your family</li>
+                    </ul>
                 </div>
+                <div class="security-illustration">
+                    <img src="assets/icons/shield-check.png" alt="Security shield" class="shield-animation">
+                </div>
+            </div>
+        </section>
+
+        <section class="cta-banner">
+            <div class="container">
+                <h3>Have a question? Call us anytime – we're here to help.</h3>
+                <a href="tel:+15551234567" class="btn btn-secondary">Call Now: (555) 123-4567</a>
             </div>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-grid">
-                <div class="footer-brand">
-                    <a href="index.html" class="logo">ResetSecure<span>LLC</span></a>
-                    <p class="tagline">Tech Help You Can Trust</p>
-                </div>
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
+            <div class="footer-logo">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="160">
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Services</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="request.html">Request Help</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Tech Support</a></li>
+                        <li><a href="#">Password Help</a></li>
+                        <li><a href="#">Virus Removal</a></li>
+                        <li><a href="#">Scam Protection</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
-                    <h3>Contact Us</h3>
+                <div class="footer-column">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contact</h4>
                     <address>
                         <p>123 Main Street<br>Anytown, ST 12345</p>
-                        <p><a href="tel:+18005551234">(800) 555-1234</a></p>
+                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
                         <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
                     </address>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> ResetSecureLLC. All rights reserved.</p>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2023 ResetSecureLLC. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <a href="tel:+18005551234" class="floating-call" aria-label="Call Now">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256" fill="#ffffff">
-            <path d="M222.3,158.5l-46.8-20.1a14,14,0,0,0-13.3,1.3l-24.2,16.8a76.5,76.5,0,0,1-35.2-35h0L116.3,94a14,14,0,0,0,1.4-13.1L97.5,33.7a14,14,0,0,0-14.7-8.4A54.3,54.3,0,0,0,32,80c0,78.6,63.4,144,144,144a54.3,54.3,0,0,0,54.7-50.8A14,14,0,0,0,222.3,158.5ZM176,208A128.1,128.1,0,0,1,48,80,38.3,38.3,0,0,1,82.4,40.7a2,2,0,0,1,2.1,1.2L103,87.6a2,2,0,0,1-.2,1.9L82.4,118.9a12,12,0,0,0-.8,11.9,90.7,90.7,0,0,0,42.8,42.8,12,12,0,0,0,11.9-.8l29.4-20.4a2,2,0,0,1,1.9-.2l45.7,19.6a2,2,0,0,1,1.2,2.1A38.3,38.3,0,0,1,176,208Z"></path>
-        </svg>
+    <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
+        <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
-
-    <button class="scroll-top" aria-label="Scroll to top">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="#ffffff">
-            <path d="M205.7,122.3a8.1,8.1,0,0,1,0,11.4,8.2,8.2,0,0,1-11.4,0L136,83.3V216a8,8,0,0,1-16,0V83.3L61.7,133.7a8.2,8.2,0,0,1-11.4,0,8.1,8.1,0,0,1,0-11.4l72-72a8.1,8.1,0,0,1,11.4,0ZM216,40a8,8,0,0,0-8,8V64H48V48a8,8,0,0,0-16,0V64a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A8,8,0,0,0,216,40Z"></path>
-        </svg>
-    </button>
 
     <script src="js/script.js"></script>
 </body>
