--- a/resetSecure/about.html
+++ b/resetSecure/about.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -35,47 +35,66 @@
     <main class="about-page">
         <section class="about-hero">
             <div class="container">
-                <h1>Our Story</h1>
-                <p class="subheadline">Helping seniors stay safe and confident with technology.</p>
+                <h1>Our Mission</h1>
+                <p class="subheadline">Empowering seniors with trusted, patient tech support.</p>
             </div>
         </section>
 
-        <section class="mission-section">
+        <section class="founder-section">
             <div class="container">
-                <div class="mission-content">
-                    <h2>Why We Do This</h2>
-                    <p>After helping his own grandparents with technology for years, our founder saw how vulnerable seniors are to scams and technical challenges. What started as family tech support grew into a mission to protect and empower seniors in the digital age.</p>
-                    <p>We believe technology should be accessible to everyone, regardless of age or experience level. Our team combines technical expertise with patience and clear communication.</p>
-                </div>
-                <div class="mission-image">
-                    <img src="assets/images/about-illustration.svg" alt="Senior couple using technology with help">
+                <div class="founder-profile">
+                    <div class="founder-photo">
+                        <div class="founder-photo-container">
+                            <img src="./assets/images/colton-keene.jpg" alt="Colton - Founder of ResetSecureLLC" class="founder-photo-img">
+                        </div>
+                    </div>
+                    <div class="founder-info">
+                        <h2>Meet Colton</h2>
+                        <p class="founder-title">Founder & Local Tech Expert</p>
+                        <p class="founder-story">I live in The Villages and started this business after helping neighbors with tech issues. I saw how vulnerable seniors are to scams and technical challenges, so I created ResetSecure to offer honest, in-person help.</p>
+                        
+                        <div class="credentials">
+                            <h3>Credentials</h3>
+                            <ul>
+                                <li>🎓 B.A. Sociology, University of Florida</li>
+                                <li>📚 MBA (In Progress), Boston University</li>
+                                <li>🔧 CompTIA A+ and Network+ Certified</li>
+                                <li>🏠 Local Resident – The Villages Community</li>
+                            </ul>
+                        </div>
+                        
+                        <div class="cta-buttons">
+                            <a href="request.html" class="btn btn-primary">Request Help</a>
+                            <a href="tel:+15551234567" class="btn btn-secondary">Call Now</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="why-section">
+        <section class="values-section">
             <div class="container">
-                <h2>Why Seniors Love Us</h2>
-                <div class="why-grid">
-                    <div class="why-card">
-                        <img src="assets/icons/hourglass.svg" alt="Hourglass icon">
+                <h2>Why Seniors Trust Us</h2>
+                <div class="values-grid">
+                    <div class="value-card">
+                        <img src="assets/icons/hourglass.png" alt="Patience icon">
                         <h3>Patience</h3>
-                        <p>We never rush and explain things as many times as needed.</p>
+                        <p>We never rush and explain as many times as needed.</p>
                     </div>
-                    <div class="why-card">
-                        <img src="assets/icons/chat.svg" alt="Chat icon">
+                    <div class="value-card">
+                        <img src="assets/icons/chat.png" alt="Communication icon">
                         <h3>Clear Communication</h3>
-                        <p>No confusing tech jargon - just plain language explanations.</p>
+                        <p>No tech jargon - just plain language explanations.</p>
                     </div>
-                    <div class="why-card">
-                        <img src="assets/icons/heart.svg" alt="Heart icon">
+                    <div class="value-card">
+                        <img src="assets/icons/heart.png" alt="Compassion icon">
                         <h3>Compassion</h3>
-                        <p>We understand the frustration technology can cause.</p>
+                        <p>We understand technology frustration.</p>
                     </div>
-                    <div class="why-card">
-                        <img src="assets/icons/home.svg" alt="Home icon">
+                    <div class="value-card">
+                        <img src="assets/icons/home.png" alt="Home service icon">
                         <h3>In-Home Service</h3>
-                        <p>We come to you for hands-on help (or assist remotely).</p>
+                        <p>We come to you for hands-on help.</p>
                     </div>
                 </div>
             </div>
@@ -83,54 +102,22 @@
 
         <section class="process-section">
             <div class="container">
-                <h2>How It Works</h2>
+                <h2>How We Help</h2>
                 <div class="process-steps">
                     <div class="process-step">
                         <div class="step-number">1</div>
                         <h3>Contact Us</h3>
-                        <p>Call or fill out our simple request form to tell us about your issue.</p>
+                        <p>Call or fill out our simple request form.</p>
                     </div>
                     <div class="process-step">
                         <div class="step-number">2</div>
-                        <h3>We Respond</h3>
-                        <p>We'll call or visit within 2 hours (sooner for emergencies).</p>
+                        <h3>Quick Response</h3>
+                        <p>We respond within 2 hours (sooner for emergencies).</p>
                     </div>
                     <div class="process-step">
                         <div class="step-number">3</div>
-                        <h3>Issue Resolved</h3>
-                        <p>We fix the problem and teach you how to prevent it in the future.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="team-section">
-            <div class="container">
-                <h2>Meet Our Team</h2>
-                <div class="team-grid">
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <img src="assets/images/team-john.jpg" alt="John, Founder">
-                        </div>
-                        <h3>John Peterson</h3>
-                        <p class="role">Founder & Lead Technician</p>
-                        <p>Started ResetSecure after helping his grandparents with technology for years.</p>
-                    </div>
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <img src="assets/images/team-sarah.jpg" alt="Sarah, Technician">
-                        </div>
-                        <h3>Sarah Chen</h3>
-                        <p class="role">Senior Technician</p>
-                        <p>Specializes in scam prevention and digital security for seniors.</p>
-                    </div>
-                    <div class="team-member">
-                        <div class="member-photo">
-                            <img src="assets/images/team-michael.jpg" alt="Michael, Technician">
-                        </div>
-                        <h3>Michael Rodriguez</h3>
-                        <p class="role">Technician</p>
-                        <p>Patient teacher with expertise in smartphones and tablets.</p>
+                        <h3>Problem Solved</h3>
+                        <p>We fix the issue and teach prevention.</p>
                     </div>
                 </div>
             </div>
@@ -145,12 +132,47 @@
     </main>
 
     <footer class="footer">
-        <!-- Same footer as index.html -->
+        <div class="container">
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Services</h4>
+                    <ul>
+                        <li><a href="#">Tech Support</a></li>
+                        <li><a href="#">Password Help</a></li>
+                        <li><a href="#">Virus Removal</a></li>
+                        <li><a href="#">Scam Protection</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>123 Main Street<br>Anytown, ST 12345</p>
+                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
+                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                    </address>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2023 ResetSecureLLC. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
     <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
-        <img src="assets/icons/phone.svg" alt="Phone icon">
+        <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
+
+    <button class="scroll-to-top" aria-label="Scroll to top"></button>
 
     <script src="js/script.js"></script>
 </body>
