--- a/resetSecure/request.html
+++ b/resetSecure/request.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         <label for="full-name">Full Name</label>
                         <div class="input-with-icon">
-                            <img src="assets/icons/user-circle.svg" alt="User icon">
+                            <img src="assets/icons/user-circle.png" alt="User icon">
                             <input type="text" id="full-name" name="full-name" required placeholder="John Smith">
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="form-group">
                         <label for="address">Address (for in-person visits)</label>
                         <div class="input-with-icon">
-                            <img src="assets/icons/map-pin.svg" alt="Map pin icon">
+                            <img src="assets/icons/map-pin.png" alt="Map pin icon">
                             <input type="text" id="address" name="address" placeholder="123 Main St, Anytown">
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                     <div class="form-group">
                         <label for="phone">Phone Number</label>
                         <div class="input-with-icon">
-                            <img src="assets/icons/phone.svg" alt="Phone icon">
+                            <img src="assets/icons/phone.png" alt="Phone icon">
                             <input type="tel" id="phone" name="phone" required placeholder="(555) 123-4567">
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="form-group">
                         <label for="email">Email (optional)</label>
                         <div class="input-with-icon">
-                            <img src="assets/icons/envelope.svg" alt="Envelope icon">
+                            <img src="assets/icons/envelope.png" alt="Envelope icon">
                             <input type="email" id="email" name="email" placeholder="john@example.com">
                         </div>
                     </div>
@@ -129,17 +129,17 @@
                 <h2>You're In Good Hands</h2>
                 <div class="assurance-grid">
                     <div class="assurance-card">
-                        <img src="assets/icons/shield-check.svg" alt="Shield icon">
+                        <img src="assets/icons/shield-check.png" alt="Shield icon">
                         <h3>Background Checked</h3>
                         <p>All our technicians pass rigorous background checks.</p>
                     </div>
                     <div class="assurance-card">
-                        <img src="assets/icons/clock.svg" alt="Clock icon">
+                        <img src="assets/icons/clock.png" alt="Clock icon">
                         <h3>Fast Response</h3>
                         <p>We respond to all requests within 2 hours.</p>
                     </div>
                     <div class="assurance-card">
-                        <img src="assets/icons/heart.svg" alt="Heart icon">
+                        <img src="assets/icons/heart.png" alt="Heart icon">
                         <h3>Senior-Focused</h3>
                         <p>Patience and clear communication guaranteed.</p>
                     </div>
@@ -149,11 +149,44 @@
     </main>
 
     <footer class="footer">
-        <!-- Same footer as index.html -->
+        <div class="container">
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Services</h4>
+                    <ul>
+                        <li><a href="#">Tech Support</a></li>
+                        <li><a href="#">Password Help</a></li>
+                        <li><a href="#">Virus Removal</a></li>
+                        <li><a href="#">Scam Protection</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>123 Main Street<br>Anytown, ST 12345</p>
+                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
+                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                    </address>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2023 ResetSecureLLC. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
     <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
-        <img src="assets/icons/phone.svg" alt="Phone icon">
+        <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
 
     <script src="js/script.js"></script>
