--- a/resetSecure/contact.html
+++ b/resetSecure/contact.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -45,19 +45,19 @@
                 <div class="contact-info">
                     <h2>Contact Information</h2>
                     <div class="contact-method">
-                        <img src="assets/icons/phone.svg" alt="Phone icon">
+                        <img src="assets/icons/phone.png" alt="Phone icon">
                         <h3>Phone</h3>
                         <p><a href="tel:+15551234567">(555) 123-4567</a></p>
                         <p class="note">24/7 emergency scam support available</p>
                     </div>
                     <div class="contact-method">
-                        <img src="assets/icons/envelope.svg" alt="Envelope icon">
+                        <img src="assets/icons/envelope.png" alt="Envelope icon">
                         <h3>Email</h3>
                         <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
                         <p class="note">Response within 2 business hours</p>
                     </div>
                     <div class="contact-method">
-                        <img src="assets/icons/map-pin.svg" alt="Map pin icon">
+                        <img src="assets/icons/map-pin.png" alt="Map pin icon">
                         <h3>Office</h3>
                         <address>
                             123 Main Street<br>
@@ -66,7 +66,7 @@
                         </address>
                     </div>
                     <div class="contact-method">
-                        <img src="assets/icons/clock.svg" alt="Clock icon">
+                        <img src="assets/icons/clock.png" alt="Clock icon">
                         <h3>Hours</h3>
                         <p>Monday - Friday: 8am - 8pm</p>
                         <p>Saturday: 9am - 5pm</p>
@@ -116,7 +116,7 @@
                 <div class="map-container">
                     <!-- Simple placeholder for map - would be replaced with actual map embed -->
                     <div class="map-placeholder">
-                        <img src="assets/images/map-placeholder.svg" alt="Map of service area">
+                        <img src="assets/images/map-placeholder.png" alt="Map of service area">
                     </div>
                 </div>
             </div>
@@ -139,11 +139,44 @@
     </main>
 
     <footer class="footer">
-        <!-- Same footer as index.html -->
+        <div class="container">
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h4>Services</h4>
+                    <ul>
+                        <li><a href="#">Tech Support</a></li>
+                        <li><a href="#">Password Help</a></li>
+                        <li><a href="#">Virus Removal</a></li>
+                        <li><a href="#">Scam Protection</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>123 Main Street<br>Anytown, ST 12345</p>
+                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
+                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                    </address>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2023 ResetSecureLLC. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
     <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
-        <img src="assets/icons/phone.svg" alt="Phone icon">
+        <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
 
     <script src="js/script.js"></script>
