--- a/resetSecure/index.html
+++ b/resetSecure/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.svg" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -53,6 +53,7 @@
                         </div>
                         <h3>Tech Support</h3>
                         <p>Help with smartphones, tablets, computers, and other devices.</p>
+                        <a href="request.html" class="btn btn-primary">Get Help</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -60,6 +61,7 @@
                         </div>
                         <h3>Password Recovery</h3>
                         <p>Reset forgotten passwords and set up secure password managers.</p>
+                        <a href="request.html" class="btn btn-primary">Reset Password</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -67,6 +69,7 @@
                         </div>
                         <h3>Antivirus Installation</h3>
                         <p>Protect your devices from viruses and malware.</p>
+                        <a href="request.html" class="btn btn-primary">Secure Device</a>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">
@@ -74,6 +77,7 @@
                         </div>
                         <h3>Scam Protection</h3>
                         <p>Identify and prevent online scams targeting seniors.</p>
+                        <a href="request.html" class="btn btn-primary">Stay Safe</a>
                     </div>
                 </div>
             </div>
@@ -104,6 +108,35 @@
             </div>
         </section>
 
+        <section class="about-preview">
+            <div class="container">
+                <div class="about-content">
+                    <h2>Meet Colton - Your Local Tech Expert</h2>
+                    <p class="about-intro">Hi, I'm Colton, founder of ResetSecureLLC. I live locally in The Villages and started this business after being asked for tech help again and again by neighbors and friends.</p>
+                    <div class="credentials-preview">
+                        <div class="credential-item">
+                            <span class="credential-icon">🎓</span>
+                            <span>B.A. Sociology, University of Florida</span>
+                        </div>
+                        <div class="credential-item">
+                            <span class="credential-icon">🔧</span>
+                            <span>CompTIA A+ and Network+ Certified</span>
+                        </div>
+                        <div class="credential-item">
+                            <span class="credential-icon">🏠</span>
+                            <span>Local Resident - The Villages Community</span>
+                        </div>
+                    </div>
+                    <a href="about.html" class="btn btn-primary">Learn More About Us</a>
+                </div>
+                <div class="about-image">
+                    <div class="founder-photo-container">
+                        <img src="./assets/images/colton-keene.jpg" alt="Colton - Founder of ResetSecureLLC" class="founder-photo">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="security">
             <div class="container">
                 <div class="security-content">
@@ -116,10 +149,22 @@
                         <li>Emergency support if you suspect fraud</li>
                         <li>Peace of mind for you and your family</li>
                     </ul>
+                    <div class="security-cta">
+                        <a href="request.html" class="btn btn-primary">Get Protected Today</a>
+                        <a href="tel:+15551234567" class="btn btn-secondary">Call for Emergency</a>
+                    </div>
                 </div>
                 <div class="security-illustration">
                     <img src="assets/icons/shield-check.png" alt="Security shield" class="shield-animation">
                 </div>
+            </div>
+        </section>
+
+        <section class="emergency-cta">
+            <div class="container">
+                <h4>🚨 Emergency Tech Support</h4>
+                <p>If you're locked out of your device or suspect a scam, call us immediately!</p>
+                <a href="tel:+15551234567" class="btn">Call Now: (555) 123-4567</a>
             </div>
         </section>
 
@@ -133,9 +178,6 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-logo">
-                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="160">
-            </div>
             <div class="footer-links">
                 <div class="footer-column">
                     <h4>Services</h4>
@@ -174,6 +216,8 @@
     <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
         <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
+
+    <button class="scroll-to-top" aria-label="Scroll to top"></button>
 
     <script src="js/script.js"></script>
 </body>
