--- a/resetSecure/about.html
+++ b/resetSecure/about.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="220">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -27,7 +27,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <a href="tel:+15551234567" class="phone-link">(555) 123-4567</a>
+                <a href="tel:+13523523526" class="phone-link">352-352-SOLD</a>
             </nav>
         </div>
     </header>
@@ -65,7 +65,7 @@
                         
                         <div class="cta-buttons">
                             <a href="request.html" class="btn btn-primary">Request Help</a>
-                            <a href="tel:+15551234567" class="btn btn-secondary">Call Now</a>
+                            <a href="tel:+13523523526" class="btn btn-secondary">Call Now</a>
                         </div>
                     </div>
                 </div>
@@ -154,9 +154,9 @@
                 <div class="footer-column">
                     <h4>Contact</h4>
                     <address>
-                        <p>123 Main Street<br>Anytown, ST 12345</p>
-                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
-                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                        <p>ResetSecureLLC - The Villages, Florida</p>
+                        <p><a href="tel:+13523523526">352-352-SOLD</a></p>
+                        <p><a href="mailto:coltonkeene@gmail.com">coltonkeene@gmail.com</a></p>
                     </address>
                 </div>
             </div>
@@ -168,7 +168,7 @@
         </div>
     </footer>
 
-    <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
+    <a href="tel:+13523523526" class="floating-call-btn" aria-label="Call us">
         <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
 
