--- a/resetSecure/contact.html
+++ b/resetSecure/contact.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="220">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -27,7 +27,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <a href="tel:+15551234567" class="phone-link">(555) 123-4567</a>
+                <a href="tel:+13523523526" class="phone-link">352-352-SOLD</a>
             </nav>
         </div>
     </header>
@@ -47,13 +47,13 @@
                     <div class="contact-method">
                         <img src="assets/icons/phone.png" alt="Phone icon">
                         <h3>Phone</h3>
-                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
+                        <p><a href="tel:+13523523526">352-352-SOLD</a></p>
                         <p class="note">24/7 emergency scam support available</p>
                     </div>
                     <div class="contact-method">
                         <img src="assets/icons/envelope.png" alt="Envelope icon">
                         <h3>Email</h3>
-                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                        <p><a href="mailto:coltonkeene@gmail.com">coltonkeene@gmail.com</a></p>
                         <p class="note">Response within 2 business hours</p>
                     </div>
                     <div class="contact-method">
@@ -128,11 +128,11 @@
                     <h3>Emergency Scam Support</h3>
                     <p>If you suspect you're being scammed or have given personal/financial information to a scammer:</p>
                     <ol>
-                        <li><strong>Call us immediately</strong> at <a href="tel:+15551234567">(555) 123-4567</a></li>
+                        <li><strong>Call us immediately</strong> at <a href="tel:+13523523526">352-352-SOLD</a></li>
                         <li>We'll help secure your accounts and devices</li>
                         <li>We'll guide you through next steps to protect yourself</li>
                     </ol>
-                    <a href="tel:+15551234567" class="btn btn-emergency">Call Now for Emergency Help</a>
+                    <a href="tel:+13523523526" class="btn btn-emergency">Call Now for Emergency Help</a>
                 </div>
             </div>
         </section>
@@ -161,9 +161,9 @@
                 <div class="footer-column">
                     <h4>Contact</h4>
                     <address>
-                        <p>123 Main Street<br>Anytown, ST 12345</p>
-                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
-                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                        <p>ResetSecureLLC - The Villages, Florida</p>
+                        <p><a href="tel:+13523523526">352-352-SOLD</a></p>
+                        <p><a href="mailto:coltonkeene@gmail.com">coltonkeene@gmail.com</a></p>
                     </address>
                 </div>
             </div>
@@ -175,7 +175,7 @@
         </div>
     </footer>
 
-    <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
+    <a href="tel:+13523523526" class="floating-call-btn" aria-label="Call us">
         <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
 
