--- a/resetSecure/index.html
+++ b/resetSecure/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="180">
+                <img src="assets/images/logo.png" alt="ResetSecureLLC" width="220">
             </a>
             <nav class="nav">
                 <button class="nav-toggle" aria-label="Menu">
@@ -27,7 +27,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <a href="tel:+15551234567" class="phone-link">(555) 123-4567</a>
+                <a href="tel:+13523523526" class="phone-link">352-352-SOLD</a>
             </nav>
         </div>
     </header>
@@ -36,8 +36,8 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1>Tech Help You Can Trust</h1>
-                    <p class="subheadline">Personal, friendly, and reliable support for seniors and families.</p>
+                    <h1>Peace of Mind in a Digital World.</h1>
+                    <p class="subheadline">Friendly, In-Person Tech Help & Cyber Protection Tailored for Seniors in The Villages.</p>
                     <a href="request.html" class="btn btn-primary">Request Help</a>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                     </ul>
                     <div class="security-cta">
                         <a href="request.html" class="btn btn-primary">Get Protected Today</a>
-                        <a href="tel:+15551234567" class="btn btn-secondary">Call for Emergency</a>
+                        <a href="tel:+13523523526" class="btn btn-secondary">Call for Emergency</a>
                     </div>
                 </div>
                 <div class="security-illustration">
@@ -164,14 +164,14 @@
             <div class="container">
                 <h4>🚨 Emergency Tech Support</h4>
                 <p>If you're locked out of your device or suspect a scam, call us immediately!</p>
-                <a href="tel:+15551234567" class="btn">Call Now: (555) 123-4567</a>
+                <a href="tel:+13523523526" class="btn">Call Now: 352-352-SOLD</a>
             </div>
         </section>
 
         <section class="cta-banner">
             <div class="container">
                 <h3>Have a question? Call us anytime – we're here to help.</h3>
-                <a href="tel:+15551234567" class="btn btn-secondary">Call Now: (555) 123-4567</a>
+                <a href="tel:+13523523526" class="btn btn-secondary">Call Now: 352-352-SOLD</a>
             </div>
         </section>
     </main>
@@ -199,9 +199,9 @@
                 <div class="footer-column">
                     <h4>Contact</h4>
                     <address>
-                        <p>123 Main Street<br>Anytown, ST 12345</p>
-                        <p><a href="tel:+15551234567">(555) 123-4567</a></p>
-                        <p><a href="mailto:help@resetsecure.com">help@resetsecure.com</a></p>
+                        <p>ResetSecureLLC - The Villages, Florida</p>
+                        <p><a href="tel:+13523523526">352-352-SOLD</a></p>
+                        <p><a href="mailto:coltonkeene@gmail.com">coltonkeene@gmail.com</a></p>
                     </address>
                 </div>
             </div>
@@ -213,7 +213,7 @@
         </div>
     </footer>
 
-    <a href="tel:+15551234567" class="floating-call-btn" aria-label="Call us">
+    <a href="tel:+13523523526" class="floating-call-btn" aria-label="Call us">
         <img src="assets/icons/phone.png" alt="Phone icon">
     </a>
 
